[project]
name = "hat-monitor"
version = "0.8.19"
description = "Hat monitor"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "appdirs ~=1.4.4",
    "hat-aio ~=0.7.12",
    "hat-drivers ~=0.9.1",
    "hat-json ~=0.6.2",
    "hat-juggler ~=0.7.1",
    "hat-sbs ~=0.7.5",
    "hat-util ~=0.6.19",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]

[project.scripts]
hat-monitor = "hat.monitor.server.main:main"

[project.urls]
Homepage = "http://hat-open.com"
Repository = "https://github.com/hat-open/hat-monitor.git"
Documentation = "http://hat-monitor.hat-open.com"

[project.optional-dependencies]
dev = [
    "hat-doit ~=0.16.2",
    "psutil >=5.9.5",
    "sphinxcontrib-programoutput >=0.17",
]

[build-system]
requires = ["hat-doit ~=0.16.2"]
build-backend = "hat.doit.pep517"

[tool.pytest.ini_options]
testpaths = ["test_pytest"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 300

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
include = ["src_py/*"]
data_file = "build/.coverage"
